# simple-image-writer

./: CMakeLists.txt  README.md
resources/: style.css
src/: main.c
